--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,16 +1,34 @@
-.layout {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    height: 100vh;
-    .appbar {
-        width: 100%;
-    }
-    .page {
-        flex: 1 0 0;
-    }
-    .footer {
-        text-align: center;
-    }
-}
+            .layout {
+                display: flex;
+                flex-direction: column;
+                align-items: left;
+                justify-content: start;
+                height: 100vh;
+            }
+            
+            .appbar {
+                width: 100%;
+                background-color: #333;
+                color: #fff;
+                padding: 10px 20px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            
+            .page {
+                flex: 1 0 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                //justify-content: center;
+                padding: 0px;
+                background-color: #ffffff;
+                border: 1px solid #a0a0a0;
+                border-radius: 8px;
+            }
+            
+            .flex-column {
+                align-items: left;
+            }
