--- a/src/components/pages/login/login.scss
+++ b/src/components/pages/login/login.scss
@@ -1,19 +1,21 @@
 .login-page {
-  border: 1px solid #000000;
-  background-color: #f0f0f0;
-  padding: 25px;
-  margin: 10px auto;
-  max-width: 400px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
+    border: 1px solid #000000;
+    background-color: #f0f0f0;
+    padding: 25px;
+    margin: 10px auto;
+    max-width: 400px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
+
 .login-page .login-btn:hover {
     width: 100%;
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #28a745; /* Green color */
+    background-color: #28a745;
+    /* Green color */
     color: #fff;
     cursor: pointer;
 }
